rr-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rr-auth
  labels:
    app: rr-auth
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8080"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rr-auth
  template:
    metadata:
      labels:
        app: rr-auth
    spec:
      containers:
      - name: rr-auth
        image: rr-auth:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
          - name: gcloud-credentials
            mountPath: /etc/gcloud/
            readOnly: true
      volumes:
        - name: gcloud-credentials
          secret:
            secretName: rr-auth-secret
