rr-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rr-auth
spec:
  selector:
    app: rr-auth
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
